--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "jito-sdk-rust"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["mdr0id <marshall@jito.wtf>"]
 edition = "2021"
 
@@ -19,11 +19,11 @@ anyhow = "1.0"
 serde = "1.0.209"
 bincode = "1.3.3"
 bs58 = "0.4.0"
+base64 = "0.21.0"  # Added base64 to main dependencies
 rand = "0.8"
 
 # Remove the [[example]] section if it exists
 
 [dev-dependencies]
-base64 = "0.21.0"
 solana-client = "1.16"
 solana-sdk = "1.16"
