--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    environment: CARGO_REGISTRY_TOKEN 
 
     steps:
       - name: Checkout code
@@ -18,7 +19,8 @@ jobs:
         with:
           toolchain: stable
 
+      - name: Login to crates.io
+        run: cargo login ${{ secrets.CRATES_IO_TOKEN }}
+
       - name: Publish to crates.io
-        env:
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CRATES_IO_TOKEN }} 
         run: cargo publish --allow-dirty
