--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "jito-sdk-rust"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["mdr0id <marshall@jito.wtf>"]
 edition = "2021"
 
@@ -21,6 +21,8 @@ bincode = "1.3.3"
 bs58 = "0.4.0"
 base64 = "0.21.0"  # Added base64 to main dependencies
 rand = "0.8"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 # Remove the [[example]] section if it exists
 
