--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
 name = "jito-sdk-rust"
-version = "0.2.2"
+version = "0.3.2"
 authors = ["mdr0id <marshall@jito.wtf>"]
 edition = "2021"
 
-# Add these fields
 description = "Rust SDK for interacting with Jito RPC services on Solana"
 license = "MIT"
 repository = "https://github.com/jito-labs/jito-rust-rpc"
@@ -19,13 +18,17 @@ anyhow = "1.0"
 serde = "1.0.209"
 bincode = "1.3.3"
 bs58 = "0.4.0"
-base64 = "0.21.0"  # Added base64 to main dependencies
+base64 = "0.21.0"
 rand = "0.8"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
-# Remove the [[example]] section if it exists
-
+# Individual Solana crates - ONLY for examples
 [dev-dependencies]
-solana-client = "1.16"
-solana-sdk = "1.16"
+solana-client = "2.2.7"
+solana-instruction = "2.2.1"
+solana-pubkey = "2.2.1"
+solana-keypair = "2.2.1"
+solana-signer = "2.2.1"
+solana-transaction = "2.2.2"
+solana-program = "2.2.1"
